We now show the actions menu on anything with either a damage or a skill
This allows better support for gear and other items that have damage actions on them but do not have a skill roll.

--- a/betterrolls-swade2/templates/item_card.html
+++ b/betterrolls-swade2/templates/item_card.html
@@ -51,7 +51,11 @@
             </span>
         {{/if}}
     </div>
+{{/if}}
+{{# if (or damage skill) }}
     {{>"modules/betterrolls-swade2/templates/actions_partial.html"}}
+{{/if}}
+{{# if skill }}
     <div class="brsw-button-row">
         {{# unless trait_roll.is_rolled}}
             <button class="brsw-roll-button brsw-form twbr-py-0.5 twbr-px-5 twbr-mr-2 twbr-mb-2
